kubernetes/manifest/wordpress/label-transformer.yaml
apiVersion: builtin
kind: LabelTransformer
metadata:
  name: metadata-labels
labels:
  environment : development
  domain: www.domain.com
fieldSpecs:
- path: metadata/labels
  create: true
- path: spec/selector/matchLabels
  kind: Deployment
  create: true
- path: spec/template/metadata/labels
  kind: Deployment
  create: true
- path: spec/selector/matchLabels
  kind: PersistentVolumeClaim
  create: true
