kubernetes/manifest/wordpress/deployment-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    environment : development
    domain: www.domain.com
    tier: frontend
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/instance: wordpress-rpi-01
    app.kubernetes.io/version: "5.7.2"
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: wordpress
    app.kubernetes.io/managed-by: github
    app.kubernetes.io/created-by: controller-manager
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    environment : development
    domain: www.domain.com
    tier: frontend
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/instance: wordpress-rpi-01
    app.kubernetes.io/version: "5.7.2"
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: wordpress
    app.kubernetes.io/managed-by: github
    app.kubernetes.io/created-by: controller-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    environment : development
    domain: www.domain.com
    tier: frontend
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/instance: wordpress-rpi-01
    app.kubernetes.io/version: "5.7.2"
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: wordpress
    app.kubernetes.io/managed-by: github
    app.kubernetes.io/created-by: controller-manager
spec:
  replicas: 3
  selector:
    matchLabels:
      environment : development
      domain: www.domain.com
      tier: frontend
      app.kubernetes.io/name: wordpress
      app.kubernetes.io/instance: wordpress-rpi-01
      app.kubernetes.io/version: "5.7.2"
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: wordpress
      app.kubernetes.io/managed-by: github
      app.kubernetes.io/created-by: controller-manager
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        environment : development
        domain: www.domain.com
        tier: frontend
        app.kubernetes.io/name: wordpress
        app.kubernetes.io/instance: wordpress-rpi-01
        app.kubernetes.io/version: "5.7.2"
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: wordpress
        app.kubernetes.io/managed-by: github
        app.kubernetes.io/created-by: controller-manager
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: tier
                operator: In
                values:
                - frontend
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: microk8s_wordpress:local
        imagePullPolicy: Never
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "1"
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress
          mountPath: /var/www/html
      volumes:
      - name: wordpress
        persistentVolumeClaim:
          claimName: wp-pvc
